syntax = "proto3";

option csharp_namespace = "PanopticonService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequestX) returns (HelloReplyX);
}

// The request message containing the user's name.
message HelloRequestX {
  string name = 1;
}

// The response message containing the greetings.
message HelloReplyX {
  string message = 1;
}
